:lipstick: Fix line height of twitch schedule on small screens

--- a/styles/TwitchSchedule.module.css
+++ b/styles/TwitchSchedule.module.css
@@ -117,7 +117,7 @@
   font-weight: var(--font-weight-bold);
   display: block;
   font-size: 1rem;
-  line-height: 1;
+  line-height: 1.6;
 }
 
 .twitchSchedule__itemCat {
